--- a/sniffersapp/templates/daily_dockets/daily_docket_sum.html
+++ b/sniffersapp/templates/daily_dockets/daily_docket_sum.html
@@ -235,19 +235,25 @@
                                     </tbody>
                                   </table>
                               </div><!-- /table-responsive -->
-                              {% if docket.fault != "" %}
                               <div class="row">
                                   <div class="col-sm-12 docket_text">
-                                      <span class="docket_text_heading">Details of Fault/Defect:</span>
-                                      <span>{{ docket.fault }}</span>
+                                      <span class="docket_text_heading">Fault/Defect found:</span>
+                                      <span>{{ docket.fault_found }}</span>
+                                  </div>
+                              </div>
+                              {% if docket.fault_found == "Yes" %}
+                              <div class="row">
+                                  <div class="col-sm-12 docket_text">
+                                      <div class="docket_text_heading">Details of Fault/Defect:</div>
+                                      <div style="overflow: auto; padding-top: 5px;" >{{ docket.fault }}</div>
                                   </div>
                               </div>
                               {% endif %}
                               {% if docket.reported_to != "" %}
                               <div class="row">
                                   <div class="col-sm-12 docket_text">
-                                      <span class="docket_text_heading">Fault Reported to:</span>
-                                      <span>{{ docket.reported_to }}</span>
+                                      <div class="docket_text_heading">Fault Reported to:</div>
+                                      <div style="overflow: auto; padding-top: 5px;" >{{ docket.reported_to }}</div>
                                   </div>
                               </div>
                               {% endif %}
