Form Builder Module

--- a/sniffersapp/templates/includes/sidebar.html
+++ b/sniffersapp/templates/includes/sidebar.html
@@ -45,6 +45,9 @@
             <li>
                 <a href="{% url 'timesheet:timesheet_list' %}"><i class="fa fa-clock-o" title="Timesheets"></i> <span class="nav-label">Timesheets</span></a>
             </li>
+            <li>
+                <a href="{% url 'create_forms:list' %}"><i class="fa fa-clock-o" title="Forms"></i> <span class="nav-label">Forms</span></a>
+            </li>
         </ul>
 
     </div>
