--- a/sniffersapp/templates/base.html
+++ b/sniffersapp/templates/base.html
@@ -12,7 +12,8 @@
     <link href="{% static 'css/plugins/datapicker/datepicker3.css' %}" rel="stylesheet">
     <link href="{% static 'css/animate.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link href="{% static 'css/james.css' %}" rel="stylesheet">
+    <!-- <link href="{% static 'css/james.css' %}" rel="stylesheet"> -->
+    <link href="{% static 'css/custom.css' %}" rel="stylesheet">
     {% block css %}{% endblock %}
 </head>
 
